--- a/user-docs/org-templates/level-2.org
+++ b/user-docs/org-templates/level-2.org
@@ -1,5 +1,6 @@
-#+AUTHOR:    VLEAD Team, IIITH
+#+AUTHOR:    VLEAD
 #+EMAIL:     engg@virtual-labs.ac.in
+
 
 #+DESCRIPTION: 
 #+KEYWORDS: 
@@ -9,13 +10,14 @@
 #+EXPORT_SELECT_TAGS: export
 #+EXPORT_EXCLUDE_TAGS: noexport
 #+STARTUP: hidestars
-#+OPTIONS: LaTeX:t          Do the right thing automatically (MathJax)
 
-#+LINK_UP: ../index.html
-#+LINK_HOME:   ../../index.html
+
+#+HTML_LINK_UP: ../index.html
+#+HTML_LINK_HOME:   ../../index.html
 #+INFOJS_OPT: view:info toc:t ltoc:t mouse:underline buttons:0 path:../../style/js/org-info.js
-#+STYLE:  <link rel="stylesheet" type="text/css" href="../../style/css/worg-style.css" />
-#+STYLE:  <link rel="stylesheet" type="text/css" href="../../style/css/override.css" />
+#+HTML_HEAD:  <link rel="stylesheet" type="text/css" href="../../style/css/worg-style.css" />
+#+HTML_HEAD_EXTRA:  <link rel="stylesheet" type="text/css" href="../../style/css/override.css" />
+#+HTML_HEAD_EXTRA:  <link rel="icon" type="image/png" href="../../style/img/favicon/popl.png" />
 
 
 
